[FIX] <pro>PerformanceTable: Fixed table missing border bottom when use colSpan.

--- a/components-pro/performance-table/style/table.less
+++ b/components-pro/performance-table/style/table.less
@@ -219,6 +219,7 @@
       position: absolute;
       z-index: 4;
       background: @body-background;
+      border-bottom: 1px solid @border-color-base;
     }
 
     &-fixed-right {
